--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,6 +9,15 @@
     android:layout_height="match_parent"
     tools:context=".Register">
 
+  <ImageView
+      android:id="@+id/imageView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/img_1" />
+
   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
@@ -26,7 +35,7 @@
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.2" />
+      app:layout_constraintVertical_bias="0.919" />
 
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayout"
@@ -37,7 +46,7 @@
       app:boxCornerRadiusTopStart="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.397"
+      app:layout_constraintVertical_bias="0.548"
       tools:layout_editor_absoluteX="24dp">
 
     <com.google.android.material.textfield.TextInputEditText
@@ -59,7 +68,7 @@
       app:boxCornerRadiusBottomStart="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.48"
+      app:layout_constraintVertical_bias="0.635"
       tools:layout_editor_absoluteX="13dp">
 
     <com.google.android.material.textfield.TextInputEditText
@@ -86,28 +95,29 @@
       android:id="@+id/registerbut"
       android:layout_width="150dp"
       android:layout_height="50dp"
+      android:layout_marginTop="4dp"
       android:backgroundTint="@color/black"
       android:elevation="6dp"
       android:stateListAnimator="@animator/button_elevation"
       android:text="@string/register"
       android:textColor="@color/white"
-      app:layout_constraintBottom_toTopOf="@+id/textView1"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.486"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
-      app:layout_constraintVertical_bias="0.65" />
+      app:layout_constraintTop_toBottomOf="@id/textInputLayout2" />
+
   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="16dp"
-      android:text="@string/click_here_to_login"
       android:gravity="center"
-      android:textSize="18sp"
+      android:text="@string/click_here_to_login"
       android:textColor="@color/black"
-      app:layout_constraintTop_toBottomOf="@id/registerbut"
-      app:layout_constraintStart_toStartOf="parent"
+      android:textSize="18sp"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintVertical_bias="0.7"  />
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/registerbut"
+      app:layout_constraintVertical_bias="0.107" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
